# states

./: .gitignore  LICENSE  README.md  notes.md  stack.yaml  states.cabal
cmd-src/: Main.hs
cmd-src/Language/States/: Options.hs
lib-src/: Lib.hs
lib-src/Language/States/: Combinations.hs  Denormaliser.hs  Parser.hs  Types.hs
notes/: notes.md
states/: states.cabal
states/cmd-src/: Main.hs
states/lib-src/: Lib.hs
