name:                states
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/states#readme
license:             BSD3
license-file:        LICENSE
author:              Arne Schroppe
maintainer:          arne.schroppe@gmx.de
copyright:           2019 Arne Schroppe
category:            Language
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      lib-src
  exposed-modules:     Lib
  other-modules:       Language.States.Types
                    ,  Language.States.Parser
                    ,  Language.States.Denormaliser
                    ,  Language.States.Combinations
  build-depends:       base >= 4.7 && < 5
                    ,  parsec
  default-language:    Haskell2010

executable states
  main-is:            Main.hs
  build-depends:      states >=0.1
                    , base
                    , optparse-applicative
  hs-source-dirs:     cmd-src
  default-language:   Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/states
